jike_submit4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goweb-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: goweb
  type: ClusterIP
