jike_submit4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goweb
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - cncamp.com
      secretName: cncamp-tls
  rules:
    - host: cncamp.com
      http:
        paths:
          - backend:
              service:
                name: goweb-service
                port:
                  number: 80
            path: "/"
            pathType: Prefix
